  format has changed. Kore will also not respond to people who are repeating
  themselves.
- teleportAuto_search will now prevent attackAuto from attacking monsters in
  the event that no monsters you are searching for exist onscreen.
- chat.txt uses one line per message, allowing grepping.
- skillsAddAuto will now print a message when it auto-adds a skill.

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm
- New selfCondition _whenPermitSkill _whenNotPermitSkill for use in auto-skill
  usage blocks; they are true/false respectively when you have been granted
  use of that temporary skill.
- New condition _smartEncore for useSelfSkill. When 1, it will cast the
  Encore skill instead of this skill if Encore would cause this skill to
  be cast (saves SP for bards and dancers).
- avoidGM_near now supports different modes:
  0 - disabled (do not avoid GM)
  1 - teleport & disconnect
  2 - disconnect
  3 - teleport
  4 - respawn
- New 'previousDamage (range)' condition for attackSkillSlot.
  Use this skill only when your damage to the monster is between the
  specified range.
- teleportAuto_maxDmgInLock (number)
  Similar to teleportAuto_maxDmg, but only has effect when in lockMap.
- teleportAuto_minAggressivesInLock (number)
  Similar to teleportAuto_minAggressives, but only has effect when in lockMap.

Internal:
- Move a "pm" message into "pm/sent" domain so that "beepOnDomains pm" won't
  beep on your own PMs.
- Add a third argument $obj to objectRemoved() function (just like
  objectAdded() has), and moved the objectRemoved() calls to just before the